infra/eu-central-1/k8s/workloads/gitea-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea
  namespace: dp-system
spec:
  ingressClassName: traefik
  rules:
    - host: git.ml.ink
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitea
                port:
                  number: 3000
